2007-08-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Force numeric and boolean literals
	in expressions to register with their intreps intact, even if that
	means overwriting existing intreps in already registered literals.

2007-08-25  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclExecute.c (TclExecuteByteCode): Added code to handle
	* tests/expr.test (expr-23.48-53)	     integer exponentiation
	that results in 32- and 64-bit integer results, avoiding calls to
	wide integer exponentiation routines in this common case.
	[Bug 1767293]

	* library/clock.tcl (ParseClockScanFormat): Modified code to allow
	* tests/clock.test (clock-60.*):            case-insensitive
	matching of time zone and month names. [Bug 1781282]
	
	
2007-08-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Register literals found in expressions
	* tests/compExpr.test:	to restore literal sharing.  Preserve numeric
	intreps when literals are created for the first time.  Correct memleak
	in ExecConstantExprTree() and add test for the leak.

2007-08-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c: replaced copy loop that tripped some
	compilers with memmove [Bug 1780870]

2007-08-23  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl ([auto_load_index]):	Delete stray "]" that created
	an expr syntax error (masked by a [catch]).

	* generic/tclCompCmds.c (TclCompileReturnCmd):	Added crash protection
	to handle callers other than TclCompileScript() failing to meet the
	initialization assumptions of the TIP 280 code in CompileWord().

	* generic/tclCompExpr.c:	Suppress the attempt to convert to
	numeric when pre-compiling a constant expresion indicates an error.

2007-08-22  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (TEBC): disable the new shortcut to frequent
	INSTs for debug builds. REVERTED (collision with alternative fix)

2007-08-21  Don Porter  <dgp@users.sourceforge.net>
